--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!-- header -->
   <h1>
-    Hello FE Morning Class Batch 13 day 1
+    Hello FE Morning Class Batch 13 day 1 (tes ubah - suto)
   </h1>
   <article>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat aliquam ipsa laudantium quaerat autem magnam at enim consectetur aut excepturi, quam ex quibusdam numquam non illo veritatis animi doloribus asperiores.
