update from surya

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- header -->
   <h1>
     Hello FE Morning Class Batch 13 day 1
+    <h1>HELLO FROM SURYA</h1>
   </h1>
   <article>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat aliquam ipsa laudantium quaerat autem magnam at enim consectetur aut excepturi, quam ex quibusdam numquam non illo veritatis animi doloribus asperiores.
