--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <h1>
     Hello FE Morning Class Batch 13 day 1 (tes ubah - suto)
     Hello FE Morning Class Batch 13 day 1
+    Hello FE Morning Class Batch 13 day 1 (tes inoki)
     <h1>HELLO FROM SURYA</h1>
   </h1>
   <article>
