--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     Hello FE Morning Class Batch 13 day 1 (tes ubah - suto)
     Hello FE Morning Class Batch 13 day 1
     Hello FE Morning Class Batch 13 day 1 (tes inoki)
+    Heloo saya Balya
     <h1>HELLO FROM SURYA</h1>
   </h1>
   <article>
