--- a/index.html
+++ b/index.html
@@ -1,27 +1,292 @@
 <!DOCTYPE html>
-<!-- tag/ element html -->
 <html lang="en">
-  <!-- tag head, untuk memasukkan file lain -->
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title Document</title>
-  <!-- ini untuk menggabungkan/memanggil file style.css nya -->
-  <link rel="stylesheet" href="style.css">
-</head>
-<!-- tag body, berupa tampilan di website -->
-<body>
-  <!-- header -->
-  <h1>
-    Hello FE Morning Class Batch 13 day 1 (tes ubah - suto)
-    Hello FE Morning Class Batch 13 day 1
-    Hello FE Morning Class Batch 13 day 1 (tes inoki)
-    Heloo saya Balya
-    <h1>HELLO FROM SURYA</h1>
-  </h1>
-  <article>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat aliquam ipsa laudantium quaerat autem magnam at enim consectetur aut excepturi, quam ex quibusdam numquam non illo veritatis animi doloribus asperiores.
-  </article>
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="Mystyle.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <!-- AWAL NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-color shadow fixed-top">
+      <div class="container">
+        <a class="navbar-brand nav-logo" href="#">Balya web Developer personal page</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#About">About Me </a>
+            <a class="nav-link" href="#Myskils">My Skils</a>
+            <a class="nav-link" href="#Project">Galerry Project</a>
+            <a class="nav-link" href="#contact">Contact Me</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- AKHIR NAVBAR -->
+
+    <!-- SECTION HERO -->
+    <section class="hero text-center">
+      <img src="./img/profile.jpg" alt="profile" class="rounded-circle border border-dark border-5" />
+      <h1 class="display-4">Balya</h1>
+      <p class="lead">Hello Guys nice to meet You, I'm Balya the one who make your website more beutifull</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffffff"
+          fill-opacity="100"
+          d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- AKHIR SECTION HERO -->
+
+    <!-- About -->
+    <section id="About">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <h2>About Me</h2>
+        </div>
+        <div class="row justify-content-evenly fs-5">
+          <div class="col-md-9 text-start">
+            <p>
+              Haloo saya adalah seorang web developer.Nama saya Balya saya lahir di Medan 11 november 1996 untuk sekarang saya masih seorang freelance web front end. Saya lulus dari SMAN 18 Medan pada tahun 2014 kemudian karena keadaan yang
+              tidak menguntungkan saya harus menerima kenyataan bahwa saya tidak dapat melanjutkan kuliah pada tahun 2014.Kemudian akhirnya pada tahun 2015 saya bisa dapat merasakan perkuliahan tepatnya saya kuliah di Usu pada jurusan yang
+              juga saya sukai yaitu Ilmu Komputer. Di tahap ini saya banyak belajar tidak hanya mengembangkan Hard Skill namun juga meningkatkan Soft Skill saya dalam berinteraksi dengan orang banyak. Alhamdulillah saya berhasil lulus tepat
+              waktu pada tahun 2019 dan sekarang saya sedang Bootcamp di Binar acamdemy agar saya dapat mendapatkan pekerjaan impian menjadi seorang web Fullstack Dev.
+            </p>
+          </div>
+          <div class="col-md-3 mb-3">
+            <ul>
+              <li>Sd Muhammadiyah 11 Medan</li>
+              <li>SMP N 16 Medan</li>
+              <li>SMA N 18 Medan</li>
+              <li>Fakultas Ilmu Komputer dan Teknologi Informasi Sumatera Utara</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#71dde925"
+          fill-opacity="1"
+          d="M0,160L48,176C96,192,192,224,288,213.3C384,203,480,149,576,144C672,139,768,181,864,202.7C960,224,1056,224,1152,208C1248,192,1344,160,1392,144L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir About -->
+
+    <!-- My Skilss -->
+    <section id="Myskils">
+      <div class="container justify-content-center">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h3>My Skliss</h3>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-9">
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="1000">
+                  <img src="./img/javascript-736400_1280.png" class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                  <img src="./img/html.png" class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/css.png" class="d-block w-100" alt="..." />
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffff"
+          fill-opacity="1"
+          d="M0,256L48,229.3C96,203,192,149,288,138.7C384,128,480,160,576,176C672,192,768,192,864,192C960,192,1056,192,1152,186.7C1248,181,1344,171,1392,165.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir Skils -->
+    <!-- Section Project -->
+    <section id="Project">
+      <div class="container">
+        <div class="row text-center mb-5">
+          <div class="col">
+            <h2>My Gallery Project</h2>
+          </div>
+          <div class="row justify-content-evenly">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGFuZGluZyUyMHBhZ2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img
+                  src="https://images.unsplash.com/photo-1536104968055-4d61aa56f46a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fHdlYnNpdGUlMjBkZXNpZ258ZW58MHwyfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="https://images.unsplash.com/photo-1453928582365-b6ad33cbcf64?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bGFuZGluZyUyMHBhZ2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img
+                  src="https://images.unsplash.com/photo-1603975711481-18b7aaca4caa?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fHdlYnNpdGUlMjBkZXNpZ258ZW58MHwyfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="https://images.unsplash.com/photo-1512486130939-2c4f79935e4f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8d2Vic2l0ZSUyMGRlc2lnbnxlbnwwfDJ8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#71dde925"
+          fill-opacity="1"
+          d="M0,128L48,122.7C96,117,192,107,288,117.3C384,128,480,160,576,160C672,160,768,128,864,128C960,128,1056,160,1152,149.3C1248,139,1344,85,1392,58.7L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir Project -->
+    <!-- Section Contact Me -->
+    <section id="contact">
+      <div class="container">
+        <div class="section-title text-center mb-5">
+          <h2>Contact</h2>
+        </div>
+
+        <div class="row" data-aos="fade-in">
+          <div class="col-lg-5 d-flex align-items-stretch">
+            <div class="info">
+              <div class="address">
+                <i class="bi bi-geo-alt"></i>
+                <h4>Location:</h4>
+                <p>Jl.Sekata GG.Alfalah No.13 Kec. Medan Barat Kota Medan</p>
+              </div>
+
+              <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Email:</h4>
+                <p>Balyazulfikar@gmail.com</p>
+              </div>
+
+              <div class="phone">
+                <i class="bi bi-phone"></i>
+                <h4>Call:</h4>
+                <p>+62 852 7535 7068</p>
+              </div>
+
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.8917413216554!2d98.66787051525144!3d3.612234151137348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3031318d0c4d1493%3A0x9695b9c5ab048926!2sKoi%20Brothers!5e0!3m2!1sen!2sid!4v1625402654120!5m2!1sen!2sid"
+                frameborder="0"
+                style="border: 0; width: 100%; height: 290px"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <div class="row">
+                <div class="form-group col-md-6">
+                  <label for="name">Your Name</label>
+                  <input type="text" name="name" class="form-control" id="name" required />
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="name">Your Email</label>
+                  <input type="email" class="form-control" name="email" id="email" required />
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="name">Subject</label>
+                <input type="text" class="form-control" name="subject" id="subject" required />
+              </div>
+              <div class="form-group">
+                <label for="name">Message</label>
+                <textarea class="form-control" name="message" rows="10" required></textarea>
+              </div>
+              <div class="text-center mt-5"><button class="btn-primary" type="submit">Send Message</button></div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#84d5cc"
+          fill-opacity="1"
+          d="M0,224L30,213.3C60,203,120,181,180,181.3C240,181,300,203,360,202.7C420,203,480,181,540,181.3C600,181,660,203,720,224C780,245,840,267,900,234.7C960,203,1020,117,1080,90.7C1140,64,1200,96,1260,117.3C1320,139,1380,149,1410,154.7L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+
+    <!-- Akhir Contact Me -->
+
+    <!-- footer -->
+    <footer class="bg-color text-white text-center">
+      <p>created with <i class="bi bi-heart-fill text-warning"></i> by <a class="text-white fw-bold" href="https://www.instagram.com/balyaground/">BalyaGround</a></p>
+    </footer>
+    <!-- akhir footer -->
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
