--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="Mystyle.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href='//fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
+
     <title>Personal Web Page</title>
   </head>
   <!-- coba push ulang -->
@@ -37,7 +40,7 @@
     <section class="hero text-center">
       <img src="./img/profile.jpg" alt="profile" class="rounded-circle border border-dark border-5" />
       <h1 class="display-4">Balya</h1>
-      <p class="lead">Hello Guys nice to meet You, I'm Balya the one who make your website more beutifull</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffffff"
@@ -51,11 +54,11 @@
     <!-- About -->
     <section id="About">
       <div class="container">
-        <div class="row text-center mb-3">
+        <div class="row text-center mb-3" data-aos="fade-in" data-aos-offset="500">
           <h2>About Me</h2>
         </div>
         <div class="row justify-content-evenly fs-5">
-          <div class="col-md-9 text-start">
+          <div class="col-md-9 text-start" data-aos="fade-right" data-aos-delay="500">
             <p>
               Haloo saya adalah seorang web developer.Nama saya Balya saya lahir di Medan 11 november 1996 untuk sekarang saya masih seorang freelance web front end. Saya lulus dari SMAN 18 Medan pada tahun 2014 kemudian karena keadaan yang
               tidak menguntungkan saya harus menerima kenyataan bahwa saya tidak dapat melanjutkan kuliah pada tahun 2014.Kemudian akhirnya pada tahun 2015 saya bisa dapat merasakan perkuliahan tepatnya saya kuliah di Usu pada jurusan yang
@@ -63,7 +66,7 @@
               waktu pada tahun 2019 dan sekarang saya sedang Bootcamp di Binar acamdemy agar saya dapat mendapatkan pekerjaan impian menjadi seorang web Fullstack Dev.
             </p>
           </div>
-          <div class="col-md-3 mb-3">
+          <div class="col-md-3 mb-3" data-aos="fade-left" data-aos-delay="1000">
             <ul>
               <li>Sd Muhammadiyah 11 Medan</li>
               <li>SMP N 16 Medan</li>
@@ -87,12 +90,12 @@
     <!-- My Skilss -->
     <section id="Myskils">
       <div class="container justify-content-center">
-        <div class="row text-center mb-3">
+        <div class="row text-center mb-3" data-aos="fade-down">
           <div class="col">
             <h3>My Skliss</h3>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" data-aos="flip-left" data-aos-delay="500">
           <div class="col-9">
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
@@ -130,11 +133,12 @@
     <!-- Section Project -->
     <section id="Project">
       <div class="container">
-        <div class="row text-center mb-5">
+        <div class="row text-center mb-5" data-aos="zoom-in">
           <div class="col">
             <h2>My Gallery Project</h2>
           </div>
-          <div class="row justify-content-evenly">
+        </div>
+          <div class="row justify-content-evenly" data-aos="flip-right" data-aos-delay="500">
             <div class="col-md-4 mb-3">
               <div class="card">
                 <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGFuZGluZyUyMHBhZ2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="..." />
@@ -144,7 +148,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3">
+            <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="500">
               <div class="card">
                 <img
                   src="https://images.unsplash.com/photo-1536104968055-4d61aa56f46a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fHdlYnNpdGUlMjBkZXNpZ258ZW58MHwyfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
@@ -157,7 +161,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3">
+            <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="500">
               <div class="card">
                 <img src="https://images.unsplash.com/photo-1453928582365-b6ad33cbcf64?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bGFuZGluZyUyMHBhZ2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="..." />
                 <div class="card-body">
@@ -166,7 +170,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3">
+            <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="500">
               <div class="card">
                 <img
                   src="https://images.unsplash.com/photo-1603975711481-18b7aaca4caa?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fHdlYnNpdGUlMjBkZXNpZ258ZW58MHwyfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
@@ -179,7 +183,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3">
+            <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="500">
               <div class="card">
                 <img src="https://images.unsplash.com/photo-1512486130939-2c4f79935e4f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8d2Vic2l0ZSUyMGRlc2lnbnxlbnwwfDJ8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="..." />
                 <div class="card-body">
@@ -203,11 +207,11 @@
     <!-- Section Contact Me -->
     <section id="contact">
       <div class="container">
-        <div class="section-title text-center mb-5">
+        <div class="section-title text-center mb-5" data-aos="fade-down">
           <h2>Contact</h2>
         </div>
 
-        <div class="row" data-aos="fade-in">
+        <div class="row" data-aos="zoom-in" data-aos-delay="500">
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
@@ -283,6 +287,23 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js">
+</script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/TextPlugin.min.js"></script>
+
+<script>
+  gsap.registerPlugin(TextPlugin);
+  gsap.to(".lead", {duration: 4,delay:1, text: "Hello Guys nice to meet You, I'm Balya the one who make your website more beutifull"})
+</script>
+
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
