--- a/index.html
+++ b/index.html
@@ -59,19 +59,17 @@
         </div>
         <div class="row justify-content-evenly fs-5">
           <div class="col-md-9 text-start" data-aos="fade-right" data-aos-delay="500">
-            <p>
-              Haloo saya adalah seorang web developer.Nama saya Balya saya lahir di Medan 11 november 1996 untuk sekarang saya masih seorang freelance web front end. Saya lulus dari SMAN 18 Medan pada tahun 2014 kemudian karena keadaan yang
-              tidak menguntungkan saya harus menerima kenyataan bahwa saya tidak dapat melanjutkan kuliah pada tahun 2014.Kemudian akhirnya pada tahun 2015 saya bisa dapat merasakan perkuliahan tepatnya saya kuliah di Usu pada jurusan yang
-              juga saya sukai yaitu Ilmu Komputer. Di tahap ini saya banyak belajar tidak hanya mengembangkan Hard Skill namun juga meningkatkan Soft Skill saya dalam berinteraksi dengan orang banyak. Alhamdulillah saya berhasil lulus tepat
-              waktu pada tahun 2019 dan sekarang saya sedang Bootcamp di Binar acamdemy agar saya dapat mendapatkan pekerjaan impian menjadi seorang web Fullstack Dev.
+            <p>I am a front-end developer. Experienced in development for dynamic website projects. I hold
+              a bachelor's degree in Computer Science from the University of North Sumatra. I'm already
+              finishing bootcamp at Glints academy and I already have made one mini-project called
+              GMDB (Glints Movie Database) and of course, the other one is my final project called
+              Remindme.              
             </p>
           </div>
           <div class="col-md-3 mb-3" data-aos="fade-left" data-aos-delay="1000">
             <ul>
-              <li>Sd Muhammadiyah 11 Medan</li>
-              <li>SMP N 16 Medan</li>
-              <li>SMA N 18 Medan</li>
-              <li>Fakultas Ilmu Komputer dan Teknologi Informasi Sumatera Utara</li>
+              <li>University of North Sumatera (August 2015- August 2019)</li>
+              <li>Glints Academy Batch 13 (August 2021 - October 2021)</li>
             </ul>
           </div>
         </div>
@@ -108,6 +106,9 @@
                 <div class="carousel-item">
                   <img src="./img/css.png" class="d-block w-100" alt="..." />
                 </div>
+                <div class="carousel-item">
+                  <img src="./img/React.jpg" class="d-block w-100" alt="..." />
+                </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -143,9 +144,9 @@
               <div class="card">
                 <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bGFuZGluZyUyMHBhZ2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Landing Page</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
+                  <h5 class="card-title">Point Of Sale Web App</h5>
+                  <p class="card-text"> Make Point of Sale Front End Web App called
+                    FayKasir using Bootstrap, HTML, Javascript.</div>
               </div>
             </div>
             <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="600">
@@ -156,18 +157,19 @@
                   alt="..."
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Portofolio</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
+                  <h5 class="card-title">Web App Reminder</h5>
+                  <p class="card-text"> Make a to-go app, called Remindme using
+                    React Framework, GitLab, and Heroku</div>
               </div>
             </div>
             <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="700">
               <div class="card">
                 <img src="https://images.unsplash.com/photo-1453928582365-b6ad33cbcf64?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bGFuZGluZyUyMHBhZ2V8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Company Profile</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
+                  <h5 class="card-title">Sentiment Analysis Web App</h5>
+                  <p class="card-text">Make a system analysis sentiment web
+                    called Selvi Analysis with Python, bootstrap,
+                    and PHP</div>
               </div>
             </div>
             <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="800">
@@ -178,18 +180,21 @@
                   alt="..."
                 />
                 <div class="card-body">
-                  <h5 class="card-title">E-commerce</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
+                  <h5 class="card-title">Web Decision Support App </h5>
+                  <p class="card-text">Make a web decision support system web
+                    app to help users choose their stock for a
+                    perfect return called Sahamku.</div>
               </div>
             </div>
             <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="900">
               <div class="card">
                 <img src="https://images.unsplash.com/photo-1512486130939-2c4f79935e4f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8d2Vic2l0ZSUyMGRlc2lnbnxlbnwwfDJ8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Hotel Booking</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
+                  <h5 class="card-title">Announcement Web App</h5>
+                  <p class="card-text"> Make announcement web app for Himpunan
+                    Mahasiswa Teknik Lingkungan Universitas
+                    Sumatera Utara.
+                    </div>
               </div>
             </div>
           </div>
