--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <label for="name">Message</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
-              <div class="text-center mt-5"><button class="btn-primary" type="submit">Send Message</button></div>
+              <div class="text-center mt-5"><a href="mailto:balyazulfikar@gmail.com"><button class="btn-primary" type="submit">Send Message</button></a></div>
             </form>
           </div>
         </div>
