--- a/index.html
+++ b/index.html
@@ -247,27 +247,26 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required />
+            <div class="container">
+              <h1>Lets Connect!!</h1>
+              <form target="_blank" action="https://formsubmit.co/balyazulfikar@gmail.com" method="POST">
+                <div class="form-group">
+                  <div class="form-row mb-2">
+                    <div class="col mb-2">
+                      <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+                      <input type="hidden" name="_subject" value="New Email wohooooo!">
+                    </div>
+                    <div class="col">
+                      <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+                    </div>
+                  </div>
                 </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required />
+                <div class="form-group mb-1">
+                  <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
                 </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required />
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="text-center mt-5"><a href="mailto:balyazulfikar@gmail.com"><button class="btn-primary" type="submit">Send Message</button></a></div>
-            </form>
+                <button type="submit" class="btn btn-lg btn-dark btn-block ml-5">Send Email!</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
