--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
 <script>
   gsap.registerPlugin(TextPlugin);
-  gsap.to(".lead", {duration: 4,delay:1, text: "Hello Guys nice to meet You, I'm Balya the one who make your website more beutifull"})
+  gsap.to(".lead", {duration: 4,delay:1, text: "Hello Guys nice to Meet You, I'm Balya the one who makes your website more beautiful"})
 </script>
 
 
